--- a/main.css
+++ b/main.css
@@ -6,7 +6,6 @@
 
 .container {
     width: 80%;
-    background-color: azure;
     margin: auto;
 }
 
@@ -56,6 +55,7 @@
 .anhlon {}
 
 .mota {
+    padding-left: 100px;
     flex: 6;
 }
 
@@ -65,12 +65,12 @@
 
 .mua {
     display: flex;
-    justify-content: first baseline;
+    justify-content: space-between;
 }
 
 .add {
     text-align: center;
-    width: 150px;
+    width: 250px;
     background-color: white;
     margin-right: 10px;
     border: 1px solid gray;
@@ -80,8 +80,8 @@
 
 .checkout {
     text-align: center;
-    width: 150px;
-    background-color: greenyellow;
+    width: 250px;
+    background-color: rgb(21, 205, 95);
     height: 40px;
     line-height: 40px;
 }
@@ -97,7 +97,7 @@
 }
 
 .itemre>img {
-    width: 90%;
+    width: 100%;
 }
 
 
@@ -107,5 +107,207 @@
 
 .hinhnho {
     position: relative;
-    right: -180px;
+    right: -150px;
 }
+
+.cantien{
+    display: flex;
+    align-items: center;
+}
+
+.fontnho{
+    font-size: 11px;
+}
+
+.giaotren{
+    align-items: center;
+    display: flex;
+}
+
+.gia{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.giacon{
+    display: flex;
+    align-items: center;
+}
+
+.giacon>span{
+    opacity: 0.6;
+    margin-left: 10px;
+}
+.navbe{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.navbe>div{
+    padding:0px 60px;
+    text-align: center;
+    border-left: 1px solid rgb(239, 226, 226);
+    border-right: 1px solid rgb(227, 216, 216);
+    color: rgb(106, 174, 151);
+}
+
+
+.benefit{
+    margin-top: 60px;
+}
+.content-be{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
+    align-items: center;
+}
+.ctbe{
+    margin-right: 60px;
+    flex: 6;
+}
+
+.ctbe h2{
+    margin-top: 20px;
+}
+
+.ing h1{
+    margin-bottom: 15px;
+}
+.flexne{
+    display: flex;
+    justify-content: space-between
+}
+
+.flexne div{
+    width: 350px;
+}
+
+.flexne p{
+    color: gray;
+}
+.mr-10{
+    margin-right: 10px;
+}
+
+.nutne{
+    padding: 8px 50px;
+    border: 1px solid rgb(61, 199, 61);
+    margin-top: 30px;
+    display: inline-block;
+    margin-left: 560px;
+    border-radius: 3px;
+    color: rgb(61, 199, 61);
+}
+.container-fuild{
+    width: 100%;
+    background-color: rgb(250, 243, 243);
+    margin-top: 60px;
+    
+}
+
+.cot{
+    display: flex;
+}
+
+.cot1{
+    flex: 4;
+
+}
+
+.cot2{
+    flex: 7;
+}
+
+.flexneba{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.revi{
+    margin: 20px 0;
+    margin-top: 20px;
+    padding-top: 20px;
+}
+
+.mb-20{
+    margin-bottom: 20px;
+}
+
+.phan{
+    display: flex;
+    justify-content: space-between;
+}
+.phan1{
+    flex: 1;
+    margin-right: 20px;
+    
+}
+
+.phan2{
+    flex: 1;
+}
+.xuong{
+    position: relative;
+    left:5px;
+    float: right;
+    margin-left: 20px;
+}
+.p-5{
+    padding:10px 10px;
+}
+
+.phan1a{
+    border: 1px solid rgb(142, 225, 142);
+    border-radius: 5px;
+    margin-right: 100px;
+    margin-bottom: 20px;
+}
+
+.xam{
+    border: 1px solid gainsboro;
+}
+
+.bg-black{
+    background-color: black;
+}
+
+.chutrang{
+    color:white;
+    padding: 50px 0;
+}
+.bentraine{
+    display: flex;
+    justify-content: flex-start;
+    flex:3;
+}
+
+.bentrai1{
+    padding-right: 60px;
+}
+
+.disflex{
+    display: flex;
+    justify-content: space-between;
+}
+
+.benphaine{
+    flex: 1;
+    
+}
+
+.emial{
+    padding: 7px 17px;
+}
+
+.mailmail{
+    background-color: aquamarine;
+    position: absolute;
+    height: 31.2px;
+    top:3776px;
+    border-radius: 4px;
+    line-height: 31.2px
+}
+
+.mb
